End-to-end functionality for seeding content, sending SwarmHealth messages and sorting playlist overview based on swarm health. Fix #6

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ allprojects {
     configurations.all {
         resolutionStrategy {
             force("org.objenesis:objenesis:2.6")
+            force('com.google.inject:guice:4.2.1')
+            force('com.google.inject:guice-multibindings:4.2.1')
         }
     }
 }
