--- a/common/build.gradle
+++ b/common/build.gradle
@@ -83,11 +83,14 @@ dependencies {
     implementation 'com.mattskala:itemadapter:0.3'
 
     // BitTorrent
-    api files('libs/jlibtorrent-1.2.5.0.jar')
-    api files('libs/jlibtorrent-android-arm64-1.2.5.0.jar')
-    api files('libs/jlibtorrent-android-arm-1.2.5.0.jar')
-    api files('libs/jlibtorrent-android-x86-1.2.5.0.jar')
-    api files('libs/jlibtorrent-android-x86_64-1.2.5.0.jar')
+//    api files('libs/jlibtorrent-1.2.10.0.jar')
+//    api files('libs/jlibtorrent-android-arm64-1.2.10.0.jar')
+//    api files('libs/jlibtorrent-android-arm-1.2.10.0.jar')
+//    api files('libs/jlibtorrent-android-x86-1.2.10.0.jar')
+//    api files('libs/jlibtorrent-android-x86_64-1.2.10.0.jar')
+
+    api 'com.github.masterwok:simple-torrent-android:0.5.0'
+
 
 //    implementation 'com.github.TorrentStream:TorrentStream-Android:07f97b8'
 
