--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
         <activity
             android:parentActivityName=".ui.dashboard.DashboardActivity"
             android:name="com.example.musicdao.MusicService"
+            android:label="Music app"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
