Add native jlibtorrent linux x86_64 SO file to musicdao/src/main/jniLibs

--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -121,3 +121,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
         "-Werror" // Set Kotlin compiler warnings as errors
     ]
 }
+
+tasks.withType(Test) {
+    systemProperty "java.library.path", "./src/main/jniLibs"
+}
