--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -83,15 +83,6 @@ dependencies {
 
     // BitTorrent/Libtorrent libraries
     implementation 'com.turn:ttorrent-core:1.5'
-//    implementation('com.github.atomashpolskiy:bt-core:1.9') {
-//        exclude group: 'com.google', module: 'guice'
-//    }
-//    implementation('com.github.atomashpolskiy:bt-dht:1.9') {
-//        exclude group: 'com.google', module: 'guice'
-//    }
-//    implementation('com.google.inject:guice:4.2.3') {
-//        force = true
-//    }
 
     implementation 'com.google.android.exoplayer:exoplayer-core:2.10.5'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.5'
@@ -113,6 +104,9 @@ dependencies {
     testImplementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
     testImplementation "org.robolectric:robolectric:3.4.2"
+
+    // Reading MP3 metadata
+    implementation 'com.mpatric:mp3agic:0.9.1'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
