--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,12 @@ project(':ipv8').projectDir = new File(settingsDir, 'kotlin-ipv8/ipv8')
 include ':ipv8-android'
 project(':ipv8-android').projectDir = new File(settingsDir, 'kotlin-ipv8/ipv8-android')
 
+include ':musicdao-datafeeder'
+project(':musicdao-datafeeder').projectDir = new File(settingsDir, 'kotlin-ipv8/musicdao-datafeeder')
+
+include 'ipv8-jvm'
+project(':ipv8-jvm').projectDir = new File(settingsDir, 'kotlin-ipv8/ipv8-jvm')
+
 include ':app'
 include ':common'
 include ':trustchain-explorer'
