--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -101,12 +101,17 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:1.9.3"
-    testImplementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
     testImplementation "org.robolectric:robolectric:3.4.2"
 
+    // Testing and generating example data
+    implementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
+
     // Reading MP3 metadata
     implementation 'com.mpatric:mp3agic:0.9.1'
+
+    // Logging
+    implementation 'io.github.microutils:kotlin-logging:1.7.7'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
