--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="AllowBackup">
 
         <activity
@@ -72,9 +72,9 @@
             android:parentActivityName=".ui.dashboard.DashboardActivity" />
 
         <activity
-            android:parentActivityName=".ui.dashboard.DashboardActivity"
             android:name="com.example.musicdao.MusicService"
             android:label="Music app"
+            android:parentActivityName=".ui.dashboard.DashboardActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -84,7 +84,11 @@
                 android:resource="@xml/searchable" />
         </activity>
 
-<!--        <service android:name="nl.tudelft.trustchain.app.service.TrustChainService" />-->
+        <service android:name="nl.tudelft.trustchain.app.service.TrustChainService" />
+        <service
+            android:name="com.example.musicdao.MusicGossipingService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
