--- a/common/build.gradle
+++ b/common/build.gradle
@@ -50,6 +50,8 @@ android {
 dependencies {
     api project(':ipv8-android')
 
+    api 'com.google.guava:guava:30.0-android'
+
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
