99% working eurotoken base

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,7 +12,7 @@ ktlint {
 }
 
 sqldelight {
-    ContactDatabase {
+    Database {
         packageName = "nl.tudelft.common.sqldelight"
         sourceFolders = ["sqldelight"]
         schemaOutputDirectory = file("src/main/sqldelight/databases")
