--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include ':trustchain-explorer'
 include ':trustchain-payloadgenerator'
 include ':trustchain-trader'
 include ':trustchain-voter'
+include ':liquidity-pool'
