--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     implementation project(':peerchat')
     implementation project(':eurotoken')
     implementation project(':ig-ssi')
+    implementation project(':liquidity-pool')
     api(project(':common')){
         exclude group: 'net.java.dev.jna'
     }
