--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    ext.ktlint_version = '0.36.0'
+    ext.kotlin_version = '1.4.30'
+    ext.ktlint_version = '0.40.0'
     ext.coroutines_version = '1.3.7'
-    ext.ktlint_gradle_version = '9.1.1'
+    ext.ktlint_gradle_version = '9.4.1'
     ext.sqldelight_version = '1.2.1'
     ext.nav_version = "2.2.1"
     ext.fragment_version = '1.2.4'
@@ -16,18 +16,18 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_gradle_version"
         classpath "com.squareup.sqldelight:gradle-plugin:$sqldelight_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        // TODO: Find a way to move this to trustchain-trader
+        // TODO: Find a way to move this to trustchain-trader (gossipML relies on this too)
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
