--- a/musicdao-datafeeder/build.gradle
+++ b/musicdao-datafeeder/build.gradle
@@ -5,9 +5,12 @@ plugins {
 
 dependencies {
 //    implementation project(':common')
-    implementation project(':ipv8-jvm')
+    api(project(':ipv8-jvm')){
+        exclude group: 'org.slf4j'
+        exclude group: 'com.goterl.lazycode'
+        exclude group: 'org.bouncycastle'
+    }
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
@@ -15,7 +18,7 @@ dependencies {
     implementation 'com.mpatric:mp3agic:0.9.1'
     implementation 'com.turn:ttorrent-core:1.5'
     implementation "com.squareup.sqldelight:coroutines-extensions:$sqldelight_version"
-    implementation 'org.bitcoinj:bitcoinj-core:0.15.7'
+    implementation 'org.bitcoinj:bitcoinj-core:0.15.10'
 
     implementation files('libs/jlibtorrent-1.2.10.0.jar')
 }
@@ -28,6 +31,5 @@ application {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
         "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
-        "-Werror" // Set Kotlin compiler warnings as errors
     ]
 }
