--- a/currencyii/build.gradle
+++ b/currencyii/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation 'androidx.preference:preference:1.1.1'
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
