--- a/common/build.gradle
+++ b/common/build.gradle
@@ -102,6 +102,8 @@ dependencies {
 
     implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
 
+    implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
+
     // BitTorrent
     api files('libs/jlibtorrent-1.2.10.0.jar')
     api files('libs/jlibtorrent-android-arm64-1.2.10.0.jar')
