--- a/liquidity-pool/build.gradle
+++ b/liquidity-pool/build.gradle
@@ -62,6 +62,15 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        jcenter()
+        flatDir {
+            dirs '../common/libs'
+        }
+    }
+}
+
 dependencies {
     implementation project(":common")
     implementation project(":ipv8-android")
@@ -87,6 +96,10 @@ dependencies {
 
     // Wallet libraries
     implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
+    implementation (group: 'org.web3j', name: 'core', version: '4.6.0-android') {
+        exclude group: 'org.bouncycastle'
+    }
+    implementation group: 'org.ethereum', name:'geth-android-all-1.10.1-c2d2f4ed', ext:'aar'
 
     // Testing
     testImplementation "junit:junit:4.12"
