--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,15 @@ allprojects {
     }
 }
 
+allprojects {
+    repositories {
+        jcenter()
+        flatDir {
+            dirs '../common/libs'
+        }
+    }
+}
+
 dependencies {
     implementation project(':trustchain-voter')
     implementation project(':trustchain-explorer')
