--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -101,7 +101,7 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:1.9.3"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "org.robolectric:robolectric:3.4.2"
 
     // Testing and generating example data
