junit 5 and schnorr tests

--- a/currencyii/build.gradle
+++ b/currencyii/build.gradle
@@ -98,7 +98,8 @@ dependencies {
 
     // Testing
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation "io.mockk:mockk:1.9.3"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
