--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,6 +29,14 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
+
+        buildConfigField "String", "DEFAULT_GATEWAY_IP", "\"gateway.euro-token.nl\""
+        buildConfigField "Integer", "DEFAULT_GATEWAY_PORT", "8090"
+        buildConfigField "String", "DEFAULT_GATEWAY_PK", "\"4c69624e61434c504b3a035fd325276e03b9d0d106a91353cdd00f7a21aa861be79226224809cfedf80cbcc0e210c2ddc2f91a1fbc3e1e3cd0622e32027a27a8be7f5d28a73b42c0369f\""
+        buildConfigField "String", "DEFAULT_GATEWAY_NAME", "\"Demo Gateway\""
+
+        buildConfigField "String", "BITCOIN_FAUCET", "\"http://134.122.59.107:3000\""
+        buildConfigField "String", "BITCOIN_DEFAULT_PEER", "\"134.122.59.107\""
     }
 
     buildTypes {
