--- a/ig-ssi/build.gradle
+++ b/ig-ssi/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
+
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
     implementation 'com.github.tony19:logback-android:2.0.0'
