--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,7 +149,7 @@ dependencies {
     implementation ('net.java.dev.jna:jna:5.5.0@aar')
     implementation('com.github.tony19:logback-android:2.0.0')
 
-    implementation 'com.mattskala:itemadapter:0.4'
+    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
 
     // Testing
     testImplementation 'junit:junit:4.12'
