--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ buildscript {
     ext.dokka_version = "0.10.1"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -35,9 +36,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        maven { url "https://dl.bintray.com/mattskala/maven" }
-        maven { url "https://dl.bintray.com/terl/lazysodium-maven" }
+        mavenCentral()
         maven { url 'https://jitpack.io' }
     }
 
