--- a/currencyii/build.gradle
+++ b/currencyii/build.gradle
@@ -93,7 +93,7 @@ dependencies {
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
 
-    implementation 'com.mattskala:itemadapter:0.4'
+    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
 
     // Testing
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
