--- a/common/build.gradle
+++ b/common/build.gradle
@@ -35,8 +35,10 @@ android {
         buildConfigField "String", "DEFAULT_GATEWAY_PK", "\"4c69624e61434c504b3a035fd325276e03b9d0d106a91353cdd00f7a21aa861be79226224809cfedf80cbcc0e210c2ddc2f91a1fbc3e1e3cd0622e32027a27a8be7f5d28a73b42c0369f\""
         buildConfigField "String", "DEFAULT_GATEWAY_NAME", "\"Demo Gateway\""
 
-        buildConfigField "String", "BITCOIN_FAUCET", "\"http://134.122.59.107:3000\""
-        buildConfigField "String", "BITCOIN_DEFAULT_PEER", "\"134.122.59.107\""
+//        buildConfigField "String", "BITCOIN_FAUCET", "\"http://134.122.59.107:3000\""
+        buildConfigField "String", "BITCOIN_FAUCET", "\"https://taproot.tribler.org\""
+//        buildConfigField "String", "BITCOIN_DEFAULT_PEER", "\"134.122.59.107\""
+        buildConfigField "String", "BITCOIN_DEFAULT_PEER", "\"131.180.27.224\""
     }
 
     buildTypes {
@@ -107,8 +109,6 @@ dependencies {
     //implementation 'com.github.tony19:logback-android:2.0.0'
 
     implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
-
-    implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
 
     implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
 
