add value transfer application, start with community, layout, store...

--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include ':trustchain-payloadgenerator'
 include ':trustchain-trader'
 include ':trustchain-voter'
 include ':liquidity-pool'
+include ':valuetransfer'
