--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.room:room-runtime:2.3.0'
+    implementation project(path: ':peerchat')
+    implementation project(path: ':eurotoken')
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Testing
