general changes to app

--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation project(path: ':peerchat')
     implementation project(path: ':eurotoken')
+    implementation project(path: ':ig-ssi')
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Testing
@@ -117,4 +118,11 @@ dependencies {
 //    testImplementation 'junit:junit:4.+'
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.freeCompilerArgs += [
+        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
+        "-Werror" // Set Kotlin compiler warnings as errors
+    ]
 }
