--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,18 +3,18 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
+//apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'kotlinx-serialization'
 
 buildscript {
     repositories {
-        google()
+//        google()
         mavenCentral()
     }
-    dependencies {
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1'
-    }
+//    dependencies {
+//        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1'
+//    }
 }
 
 ktlint {
@@ -43,6 +43,18 @@ android {
         versionName "0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    flavorDimensions "version"
+
+    productFlavors {
+        demo {
+            applicationIdSuffix ".demo"
+            versionCode 1
+            versionName "1.0"
+            versionNameSuffix "-demo"
+            dimension "version"
+        }
     }
 
     signingConfigs {
