--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -59,7 +59,6 @@ android {
 }
 
 dependencies {
-//    api project(':common')
     implementation project(':common')
 
     // AndroidX
@@ -90,7 +89,6 @@ dependencies {
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
     implementation 'com.github.tony19:logback-android:2.0.0'
 
-//    implementation 'com.mattskala:itemadapter:0.3'
     implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -106,25 +104,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-//    implementation 'androidx.core:core-ktx:1.3.2'
-//    implementation 'androidx.appcompat:appcompat:1.2.0'
-//    implementation 'com.google.android.material:material:1.3.0'
-//    testImplementation 'junit:junit:4.+'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-//    implementation 'androidx.core:core-ktx:1.5.0'
-//    implementation 'androidx.appcompat:appcompat:1.3.0'
-//    implementation 'com.google.android.material:material:1.3.0'
-//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-//    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-//    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-//    testImplementation 'junit:junit:4.+'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    // Blocking dialog and top snacbkbar
     implementation 'com.jaredrummler:blocking-dialog:1.0.0'
     implementation 'com.github.Redman1037:TSnackBar:V2.0.0'
 }
