--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,4 @@ include ':trustchain-trader'
 include ':trustchain-voter'
 include ':liquidity-pool'
 include ':valuetransfer'
+include ':data-vault'
