--- a/valuetransfer/src/main/AndroidManifest.xml
+++ b/valuetransfer/src/main/AndroidManifest.xml
@@ -17,4 +17,11 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
+    <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version"/>
+    <meta-data
+        android:name="com.google.mlkit.vision.DEPENDENCIES"
+        android:value="ocr" />
+
 </manifest>
