--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -124,6 +124,9 @@ dependencies {
 
     // Zoom image
     implementation 'com.jsibbold:zoomage:1.3.1'
+
+    // Side to confirm
+    implementation "com.ncorti:slidetoact:0.9.0"
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
