--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -2,10 +2,18 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
-apply plugin: 'androidx.navigation.safeargs.kotlin'
+apply plugin: 'androidx.navigation.safeargs'
+
+buildscript {
+    ext.kotlin_version = '1.5.21'
+}
+
+configurations.all {
+    resolutionStrategy { force 'androidx.core:core-ktx:1.7.0-alpha01' }
+}
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
     buildToolsVersion "29.0.3"
 
     useLibrary 'android.test.base'
@@ -13,11 +21,12 @@ android {
 
     buildFeatures {
         viewBinding = true
+        compose true
     }
 
     defaultConfig {
         minSdkVersion 22
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -41,7 +50,8 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
-        allWarningsAsErrors = true
+//        allWarningsAsErrors = true
+        useIR = true
     }
 
     testOptions {
@@ -59,6 +69,12 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude("META-INF/*.kotlin_module")
     }
+
+    composeOptions {
+        kotlinCompilerVersion kotlin_version
+        kotlinCompilerExtensionVersion "1.0.1"
+    }
+
 }
 
 dependencies {
@@ -115,14 +131,39 @@ dependencies {
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
+
+    //
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.3.1'
+    // Compose Material Design
+    implementation "androidx.compose.material:material:1.0.1"
+    // Animations
+    implementation "androidx.compose.animation:animation:1.0.1"
+    // Tooling support (Previews, etc.)
+    implementation 'androidx.compose.ui:ui-tooling:1.0.1'
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
+    // UI Tests
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.1'
+    // Compose
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha03"
+    // Runtime
+    implementation "androidx.compose.runtime:runtime-livedata:1.0.1"
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
         "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
-        "-Werror" // Set Kotlin compiler warnings as errors
+//        "-Werror" // Set Kotlin compiler warnings as errors
     ]
 }
+
+//tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+//    kotlinOptions {
+//        freeCompilerArgs += "-Xopt-in=kotlin.ExperimentalUnsignedTypes"
+//    }
+//}
+
 
 tasks.withType(Test) {
     systemProperty "java.library.path", "./src/main/jniLibs"
