--- a/musicdao/src/main/AndroidManifest.xml
+++ b/musicdao/src/main/AndroidManifest.xml
@@ -4,4 +4,6 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
 </manifest>
