--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -149,6 +149,9 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha03"
     // Runtime
     implementation "androidx.compose.runtime:runtime-livedata:1.0.1"
+
+    implementation("com.google.accompanist:accompanist-swiperefresh:0.17.0")
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.17.0"
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
