--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -4,9 +4,20 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'kotlin-kapt'
+apply plugin: "dagger.hilt.android.plugin"
 
 buildscript {
     ext.kotlin_version = '1.5.21'
+    ext.hilt_ver = '2.38.1'
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_ver")
+    }
 }
 
 configurations.all {
@@ -159,6 +170,12 @@ dependencies {
     implementation("androidx.room:room-ktx:2.3.0")
     annotationProcessor "androidx.room:room-compiler:2.3.0"
     kapt("androidx.room:room-compiler:2.3.0")
+
+    // Hilt
+    implementation("com.google.dagger:hilt-android:$hilt_ver")
+    implementation("androidx.hilt:hilt-navigation-fragment:1.0.0-alpha03")
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0-alpha03")
+    kapt("com.google.dagger:hilt-android-compiler:$hilt_ver")
 
     // GSON
     implementation("com.google.code.gson:gson:2.8.9")
