--- a/atomic-swap/build.gradle
+++ b/atomic-swap/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 android {
     compileSdkVersion 29
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 21
@@ -35,9 +36,9 @@ dependencies {
     implementation project(":ipv8-android")
 
     // TODO: Newer than the rest of apps - should we leave or downgrade
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
