--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,7 @@
             android:parentActivityName=".ui.dashboard.DashboardActivity" />
 
         <activity
-            android:name="nl.tudelft.trustchain.atomicswap.ui.AtomicSwapActivity"
+            android:name="nl.tudelft.trustchain.atomicswap.AtomicSwapActivity"
             android:parentActivityName=".ui.dashboard.DashboardActivity" />
 
         <activity
