--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,4 @@ include ':trustchain-voter'
 include ':liquidity-pool'
 include ':valuetransfer'
 include ':atomic-swap'
+include ':common-bitcoin'
