--- a/common-ethereum/build.gradle
+++ b/common-ethereum/build.gradle
@@ -14,6 +14,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
+        // The address of the MultiSig wallet deployed on the goerli test network.
+        buildConfigField "String", "ETH_TEST_MULTISIG_ADDR", "\"0x2DfEecF7d2f5363149cC73cAb96C00575c732170\""
     }
 
     buildTypes {
@@ -32,11 +34,20 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs '../common/libs'
+    }
+}
+
 dependencies {
 
     api project(':common')
 
-    api group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
+    api(group: 'org.web3j', name: 'core', version: '4.6.0-android') {
+        exclude group: 'org.bouncycastle'
+    }
+    api group: 'org.ethereum', name: 'geth-android-all-1.10.1-c2d2f4ed', ext: 'aar'
 
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
