add the necessary files for creating a new app (which doesn't do anything yet) in the superapp

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:theme="@style/Theme.PeerChat" />
 
         <activity
+            android:name="nl.tudelft.trustchain.frost.FrostActivity"
+            android:parentActivityName=".ui.dashboard.DashboardActivity" />
+
+        <activity
             android:name="nl.tudelft.trustchain.distributedAI.DistributedActivity"
             android:parentActivityName=".ui.dashboard.DashboardActivity" />
 
