--- a/atomic-swap/build.gradle
+++ b/atomic-swap/build.gradle
@@ -29,16 +29,23 @@ android {
         jvmTarget = '1.8'
         allWarningsAsErrors = true
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     implementation project(":common")
+    implementation project(":common-bitcoin")
     implementation project(":ipv8-android")
 
     // TODO: Newer than the rest of apps - should we leave or downgrade
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
