Prevent activity reloading on screen orientation change, this fixes the loaded app from being closed on screen orientation changing

--- a/freedomOfComputing/src/main/AndroidManifest.xml
+++ b/freedomOfComputing/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nl.tudelft.trustchain.FOC">
+          package="nl.tudelft.trustchain.FOC">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -11,7 +11,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application>
-        <activity android:name=".ExecutionActivity" />
+        <activity android:name=".ExecutionActivity"
+                  android:configChanges="keyboardHidden|orientation|screenSize"></activity>
         <activity
             android:name="nl.tudelft.trustchain.FOC.MainActivityFOC"
             android:label="@string/title_activity_main_FOC"
