--- a/atomic-swap/build.gradle
+++ b/atomic-swap/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
+
 }
 
 android {
@@ -53,6 +55,10 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+
+    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
