--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -179,6 +179,8 @@ dependencies {
 
     // GSON
     implementation("com.google.code.gson:gson:2.8.9")
+    implementation("org.apache.commons:commons-csv:1.9.0")
+
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
