--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -152,6 +152,19 @@
                 android:resource="@xml/searchable" />
         </activity>
 
+        <activity
+            android:name="nl.tudelft.trustchain.literaturedao.LiteratureDaoActivity"
+            android:label="Literature sharing app"
+            android:parentActivityName=".ui.dashboard.DashboardActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
         <service android:name="nl.tudelft.trustchain.app.service.TrustChainService" />
 
         <service
