--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,7 @@ dependencies {
     implementation project(':liquidity-pool')
     implementation project(':valuetransfer')
     implementation project(':frost')
+    implementation project(':hello')
     api(project(':common')){
         exclude group: 'net.java.dev.jna'
     }
