--- a/freedomOfComputing/src/main/AndroidManifest.xml
+++ b/freedomOfComputing/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application>
-        <activity android:name=".ExecutionActivity"
-                  android:configChanges="keyboardHidden|orientation|screenSize"></activity>
+        <activity
+            android:name=".ExecutionActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
             android:name="nl.tudelft.trustchain.FOC.MainActivityFOC"
             android:label="@string/title_activity_main_FOC"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:windowSoftInputMode="stateHidden" />
     </application>
 
 </manifest>
