--- a/atomic-swap/build.gradle
+++ b/atomic-swap/build.gradle
@@ -34,6 +34,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 repositories {
