--- a/freedomOfComputing/build.gradle
+++ b/freedomOfComputing/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
 
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
